--- a/web_flask/templates/10-hbnb_filters.html
+++ b/web_flask/templates/10-hbnb_filters.html
@@ -1,55 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<title>AirBnB clone</title>
 
-<head>
-	<meta charset="utf-8">
-	<title>AirBnB Clone</title>
+		<link rel="shortcut icon" href="../static/images/icon.ico" >
 
-	<link rel="icon" type="image/png" href="static/images/icon.png" />
-	
-	<link rel="stylesheet" type="text/css" href="static/styles/4-common.css" />
-	<link rel="stylesheet" type="text/css" href="static/styles/3-header.css" />
-	<link rel="stylesheet" type="text/css" href="static/styles/6-filters.css" />
-	<link rel="stylesheet" type="text/css" href="static/styles/3-footer.css" />
-</head>
+		<link rel="stylesheet" href="../static/styles/4-common.css"/>
+		<link rel="stylesheet" href="../static/styles/3-header.css"/>
+		<link rel="stylesheet" href="../static/styles/3-footer.css"/>
+		<link rel="stylesheet" href="../static/styles/6-filters.css"/>
+	</head>
+    <body>
+		<header>
+			<div id="header_logo"></div>
+		</header>
+		<div class="container">
+			<section class="filters">
+				<button>Search</button>
+				<div class="locations">
+					<h3>States</h3>
+					<h4>&nbsp;</h4>
+					<ul class="popover">
+						{% for state in states|sort(attribute='name') %}
+							<li><h2>{{ state.name }}</h2>
+							<ul>
+								{% for city in state.cities|sort(attribute='name') %}
+									<li><h4>{{ city.name }}</h4></li>
+								{% endfor %}
+							</ul>
+							</li>
+      						{% endfor %}
+					</ul>
+				</div>
+				<div class="amenities">
+					<h3>Amenities</h3>
+					<h4>&nbsp;</h4>
+					<ul class="popover">
+						{% for amenity in amenities|sort(attribute='name') %}
+							<li><h4>{{ amenity.name }}</h4></li>
+						{% endfor %}
+					</ul>
+				</div>
 
-<body>
-	<header></header>
-	<div class="container">
-		<section class="filters">
-			<div class="locations">
-				<h3>States</h3>
-				<h4>&nbsp;</h4>
-				<UL class="popover">
-					{% for state in states|sort(attribute="name") %}
-					<LI>
-						<H2>{{ state.name }}</H2>
-						{% if state.cities %}
-						<UL>
-							{% for city in state.cities|sort(attribute="name") %}
-							<LI>{{ city.name }}</LI>
-							{% endfor %}
-						</UL>
-						{% endif %}
-					</LI>
-					{% endfor %}
-				</UL>
-			</div>
-			<div class="amenities">
-				<h3>Amenities</h3>
-				<h4>&nbsp;</h4>
-				<UL class="popover">
-					{% for amenity in amenities|sort(attribute="name") %}
-					<LI>{{ amenity.name }}</LI>
-					{% endfor %}
-				</UL>
-			</div>
-			<button>Search</button>
-		</section>
-	</div>
-	<footer>
-		<p>Holberton School</p>
-	</footer>
-</body>
-
+			</section>
+		</div>
+		<footer>
+			<p>Holberton School</p>
+		</footer>
+	</body>
 </html>
