--- a/web_flask/static/styles/3-header.css
+++ b/web_flask/static/styles/3-header.css
@@ -1,6 +1,18 @@
 header {
-  background: #ffffff url("../images/logo.png") 20px no-repeat;
-  height: 70px;
-  width: 100%;
-  border-bottom: 1px solid #cccccc;
+	background-color: white;
+	height: 70px;
+	width: 100%;
+	
+	border-bottom: 1px solid #CCCCCC;
+}
+
+#header_logo {
+	height: 100%;
+	width: 142px;
+
+	background-image: url("../images/logo.png");
+	background-repeat: no-repeat;
+	background-position: center;
+
+	margin-left: 20px;
 }
