--- a/web_flask/static/styles/4-common.css
+++ b/web_flask/static/styles/4-common.css
@@ -1,19 +1,13 @@
-html {
-  height: 100vh;
-}
-
 body {
-  margin: 0;
-  padding: 0;
-  color: #484848;
-  font-size: 14px;
-  font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  position: relative;
-  min-height: 100vh;
+	margin:0px;
+	padding:0px;
+
+	color: #484848;
+	font-size: 14px;
+	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 .container {
-  max-width: 1000px;
-  margin: 30px auto;
-  padding-bottom: 80px;
+    max-width: 1000px;
+    margin: 30px auto;
 }
